Print Preview: Requires native paths to write PDF files.

Fixing a regression by https://codereview.chromium.org/2952043002/.
Print Preview requires native paths to write PDF files.
I explicitly set NATIVE_PATH as the restriction for save-as dialog, and added a comment about the
Google Drive handling of Chrome OS save-as dialog as it is a bit tricky.

Bug: 761576
Change-Id: Ibabd428e26cfd0d96a1f65dadc5c0fa4b565e956
Reviewed-on: https://chromium-review.googlesource.com/662920
Reviewed-by: Lei Zhang <thestig@chromium.org>
Reviewed-by: Ryo Hashimoto <hashimoto@chromium.org>
Commit-Queue: Naoki Fukino <fukino@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501541}
Former-commit-id: b52144f5179f5296510fefcb3e5dea3891b0bb84